# VentureBot

./: .dockerignore  .env  .env.example  .env.template  .gitignore  .vercelignore  AGENTS.md  AGENT_PROMPTS_REFERENCE.md  CLAUDE.md  CLEANUP_PLAN.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  GOOGLE_ADK.md  Multiagent for BADM 350.docx  QUICK_START.md  README.md  README_chainlit.md  Shikhar Mattoo Cover Letter.md  Shikhar Mattoo Resume.md  VENTUREBOT_AGENT_ANALYSIS.md  VentureBots_Launch_Article.md  chainlit.md  chainlit_app.py  docker-compose.single.yml  docker-compose.yml  env.example  fix_remote_deployment.md  health_check.sh  job_description.md  main.py  multiagent_workflow.md  pytest.ini  railway.json  remote_debug.py  requirements-frontend.txt  requirements.txt  requirements_streamlit.txt  (+12 more)
.chainlit/: config.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
a2a-general/: a2a_protocol.py  server.py
agentlab_claude_websearch/: agent.py  config.yaml
agentlab_v1/: agent.py  config.yaml
agentlab_v2/: agent.py
agentlab_v3/: agent.py  competitor_search.py  config.yaml
agents/: __init__.py  (+8 more)
venturebots___ai_entrepreneurship_coaching_platform_v1_crewai-project (1)/: README.md  pyproject.toml
venturebots___ai_entrepreneurship_coaching_platform_v1_crewai-project (1)/src/venturebots___ai_entrepreneurship_coaching_platform/: crew.py  main.py
venturebots___ai_entrepreneurship_coaching_platform_v1_crewai-project (1)/src/venturebots___ai_entrepreneurship_coaching_platform/config/: tasks.yaml
(+134 files in other folders)
