[project]
name = "venturebots___ai_entrepreneurship_coaching_platform"
version = "0.1.0"
description = "venturebots___ai_entrepreneurship_coaching_platform using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
venturebots___ai_entrepreneurship_coaching_platform = "venturebots___ai_entrepreneurship_coaching_platform.main:run"
run_crew = "venturebots___ai_entrepreneurship_coaching_platform.main:run"
train = "venturebots___ai_entrepreneurship_coaching_platform.main:train"
replay = "venturebots___ai_entrepreneurship_coaching_platform.main:replay"
test = "venturebots___ai_entrepreneurship_coaching_platform.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
